# pixelfed-python-api

./: .gitignore  README.rst  pyproject.toml
src/pixelfed_python_api/: __init__.py  pixelfed.py
tests/pixelfed_python_api/: test_pixelfed.py
